@@ -3,7 +3,7 @@ package org.opentripplanner.netex.mapping;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 import org.locationtech.jts.geom.Envelope;
 import org.locationtech.jts.geom.Geometry;
 import org.opentripplanner.framework.geometry.HashGridSpatialIndex;
@@ -11,20 +11,18 @@ import org.opentripplanner.framework.i18n.NonLocalizedString;
 import org.opentripplanner.graph_builder.issue.api.DataImportIssueStore;
 import org.opentripplanner.graph_builder.issue.api.Issue;
 import org.opentripplanner.netex.mapping.support.FeedScopedIdFactory;
+import org.opentripplanner.transit.model.basic.TransitMode;
 import org.opentripplanner.transit.model.site.AreaStop;
-import org.opentripplanner.transit.model.site.GroupStop;
 import org.opentripplanner.transit.model.site.RegularStop;
 import org.opentripplanner.transit.model.site.StopLocation;
+import org.opentripplanner.transit.service.StopModelBuilder;
 import org.rutebanken.netex.model.FlexibleArea;
 import org.rutebanken.netex.model.FlexibleStopPlace;
 import org.rutebanken.netex.model.KeyListStructure;
 import org.rutebanken.netex.model.KeyValueStructure;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 class FlexStopsMapper {
 
-  private static final Logger LOG = LoggerFactory.getLogger(FlexStopsMapper.class);
   /**
    * Key-value pair used until proper NeTEx support is added
    */
@@ -36,12 +34,14 @@ class FlexStopsMapper {
     "UnrestrictedPublicTransportAreas";
   private final FeedScopedIdFactory idFactory;
   private final HashGridSpatialIndex<RegularStop> stopsSpatialIndex;
-
+  private final StopModelBuilder stopModelBuilder;
   private final DataImportIssueStore issueStore;
+  private final TransportModeMapper transportModeMapper = new TransportModeMapper();
 
   FlexStopsMapper(
     FeedScopedIdFactory idFactory,
     Collection<RegularStop> stops,
+    StopModelBuilder stopModelBuilder,
     DataImportIssueStore issueStore
   ) {
     this.idFactory = idFactory;
@@ -50,6 +50,7 @@ class FlexStopsMapper {
       Envelope env = new Envelope(stop.getCoordinate().asJtsCoordinate());
       this.stopsSpatialIndex.insert(env, stop);
     }
+    this.stopModelBuilder = stopModelBuilder;
     this.issueStore = issueStore;
   }
 
@@ -59,7 +60,7 @@ class FlexStopsMapper {
    */
   StopLocation map(FlexibleStopPlace flexibleStopPlace) {
     List<StopLocation> stops = new ArrayList<>();
-
+    TransitMode flexibleStopTransitMode = mapTransitMode(flexibleStopPlace);
     var areas = flexibleStopPlace.getAreas().getFlexibleAreaOrFlexibleAreaRefOrHailAndRideArea();
     for (var area : areas) {
       if (!(area instanceof FlexibleArea flexibleArea)) {
@@ -77,7 +78,9 @@ class FlexStopsMapper {
       Geometry flexibleAreaGeometry = mapGeometry(flexibleArea);
 
       if (shouldAddStopsFromArea(flexibleArea, flexibleStopPlace)) {
-        stops.addAll(findStopsInFlexArea(flexibleArea, flexibleAreaGeometry));
+        stops.addAll(
+          findStopsInFlexArea(flexibleArea, flexibleAreaGeometry, flexibleStopTransitMode)
+        );
       } else {
         AreaStop areaStop = mapFlexArea(
           flexibleArea,
@@ -95,8 +98,8 @@ class FlexStopsMapper {
     } else {
       // We create a new GroupStop, even if the stop place consists of a single area, in order to
       // get the ids for the area and stop place correct
-      var builder = GroupStop
-        .of(idFactory.createId(flexibleStopPlace.getId()))
+      var builder = stopModelBuilder
+        .groupStop(idFactory.createId(flexibleStopPlace.getId()))
         .withName(new NonLocalizedString(flexibleStopPlace.getName().getValue()));
       stops.forEach(builder::addLocation);
       return builder.build();
@@ -112,25 +115,31 @@ class FlexStopsMapper {
     }
 
     var areaName = area.getName();
-    return AreaStop
-      .of(idFactory.createId(area.getId()))
+    return stopModelBuilder
+      .areaStop(idFactory.createId(area.getId()))
       .withName(new NonLocalizedString(areaName != null ? areaName.getValue() : backupName))
       .withGeometry(geometry)
       .build();
   }
 
   /**
-   * Allows pickup / drop off at any regular Stop inside the area
+   * Allows pickup / drop off at all regular stops inside the area that match the transit mode of the
+   * flexible stop place.
    */
-  List<RegularStop> findStopsInFlexArea(FlexibleArea area, Geometry geometry) {
-    if (geometry == null) {
+  List<RegularStop> findStopsInFlexArea(
+    FlexibleArea area,
+    @Nullable Geometry geometry,
+    @Nullable TransitMode flexibleStopTransitMode
+  ) {
+    if (geometry == null || flexibleStopTransitMode == null) {
       return List.of();
     }
     List<RegularStop> stops = stopsSpatialIndex
       .query(geometry.getEnvelopeInternal())
       .stream()
+      .filter(stop -> flexibleStopTransitMode == stop.getGtfsVehicleType())
       .filter(stop -> geometry.contains(stop.getGeometry()))
-      .collect(Collectors.toList());
+      .toList();
 
     if (stops.isEmpty()) {
       issueStore.add(
@@ -157,6 +166,17 @@ class FlexStopsMapper {
           area.getId()
         )
       );
+      return null;
+    }
+  }
+
+  @Nullable
+  private TransitMode mapTransitMode(FlexibleStopPlace flexibleStopPlace) {
+    try {
+      return transportModeMapper.mapAllVehicleModesOfTransport(
+        flexibleStopPlace.getTransportMode()
+      );
+    } catch (TransportModeMapper.UnsupportedModeException e) {
       return null;
     }
   }
